# EchoRNA

./: .gitignore  EchoRNA_sampling.py  LICENSE  README.md  echoRNA_env.yaml  echorna_config.yaml  index.html  install.sh  make_one_protein_final.py  pyproject.toml  sample_EchoRNA.py  sampling.py  train.py  training_report.py
.ipynb_checkpoints/: README-checkpoint.md  config-checkpoint  echorna-checkpoint.yaml  source-checkpoint
config/: echorna.yaml
dataset/: test.txt  train.txt  valid (2).txt
sampling_config/: EchoRNA.yaml  RF2NA.yaml
source/: GVP.py  dataloader.py  diffusion.py  diffusion_depr.py  input_feature.py  layers.py  lora.py  model.py  sampling.py  util.py
tutorial/: 3Q0Q.cif  3Q0Q_af3.cif  sample_EchoRNA_colab.ipynb
tutorial/RNA/: 3Q0Q_A_8.fasta
tutorial/complex/: 3Q0Q_A.pickle
tutorial/esm2/: 3Q0Q_A.pt
tutorial/esmIF/: 3Q0Q_A.pt
tutorial/output_example/RNA/: 3Q0Q_50_8.fasta  3Q0Q_af3.fasta  3Q0Q_gpu.fasta
tutorial/output_example/complex/: 3Q0Q_A.pickle  3Q0Q_af3_A.pickle
tutorial/output_example/esm2/: 3Q0Q_af3_A.pt
tutorial/output_example/esmIF/: 3Q0Q_af3_A.pt
